--- a/aula01-introducao-logica-programacao-estrutura-condicional-operadores/aula01.ipynb
+++ b/aula01-introducao-logica-programacao-estrutura-condicional-operadores/aula01.ipynb
@@ -2,8 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7aaf8aea",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-08-11T13:24:45.722228Z",
+     "start_time": "2022-08-11T13:24:45.707793Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "welcome to Fundamentos da Programacao\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('welcome to Fundamentos da Programacao')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc6d7817",
    "metadata": {},
    "outputs": [],
    "source": []
